old default behaviours of 'always come to the foreground when I have something
to tell you' and 'window is always on top if there is context' are now
options.

#### Known bugs

The Dopplr module is currently broken, due to the odd SSL certificate Dopplr
use. Sorry. Working on it.

The RSS feed fetcher shares a cookie store with Safari. This may or may not
be a bug or a feature, depending on your point of view. Anyone care?

#### Technical changes:

Converted build process to use py2app rather than xcode, because I know how to
make py2app dance to my tunes. Specifically, I know how to make it pull in
external libraries and bundle them properly. Reorganised source files into
folders so I can keep track of where things are.

_Huge_ great internal re-write. Many more code-paths are now much more
message-passing based, and can do things in the background. The Google Social
stuff uses this, so no longer blocks the foreground thread.

### 0.0.12 (in development)

Added many docs to the source code.

Shelf now sends a proper User-Agent to remote servers when fetching feeds.

Removed the xmltramp library, using simplejson to parse the Dopplr API files
instead. Not that the Dopplr module works. But if it did, I would.

Messed with the flickr photo display style to include titles, and have smaller
thumbnails. I think I prefer this way.

Feeds in the display are now ordered with the most recently updated feed at
the top of the list. 'Special' feeds (twitter, flickr) are still ordered above
all others.

We now correctly strip CSS styling from feed contents.

Special casing for last.fm urls is now in, so you'll see contact's
recently-played tracks. Special-casing for the few pages I know of
that have [totally brokwn RSS feeds](http://jerakeen.org/blog/2008/02/irritating-rss-feed-links/).

Feed entries now display about how long ago they were, rather than absolute
times. Do we like this? Maybe this should be a preference.