@@ -103,3 +103,5 @@ that have [totally brokwn RSS feeds](http://jerakeen.org/blog/2008/02/irritating
 
 Feed entries now display about how long ago they were, rather than absolute
 times. Do we like this? Maybe this should be a preference.
+
+The file cache now cleans itself up. The first run of the app may take a while... Sorry.
